--- a/styles/custom.css
+++ b/styles/custom.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif&family=Open+Sans:wght@300&display=swap");
+
 html {
   scroll-behavior: smooth;
   color: #475f2b;
