--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -448,6 +448,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .top-0 {
   top: 0px;
 }
+.bottom-20 {
+  bottom: 5rem;
+}
+.right-4 {
+  right: 1rem;
+}
+.-bottom-11 {
+  bottom: -2.75rem;
+}
 .left-0 {
   left: 0px;
 }
@@ -507,6 +516,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-4 {
   margin-left: 1rem;
 }
+.mr-10 {
+  margin-right: 2.5rem;
+}
 .mr-6 {
   margin-right: 1.5rem;
 }
@@ -519,14 +531,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-2 {
   margin-left: 0.5rem;
 }
+.mt-20 {
+  margin-top: 5rem;
+}
 .mb-32 {
   margin-bottom: 8rem;
 }
 .mt-12 {
   margin-top: 3rem;
-}
-.mt-20 {
-  margin-top: 5rem;
 }
 .block {
   display: block;
@@ -543,11 +555,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-10 {
   height: 2.5rem;
 }
-.h-screen {
-  height: 100vh;
+.h-16 {
+  height: 4rem;
 }
 .h-full {
   height: 100%;
+}
+.h-screen {
+  height: 100vh;
 }
 .h-3\/6 {
   height: 50%;
@@ -570,14 +585,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-1\/2 {
   width: 50%;
 }
-.w-1\/5 {
-  width: 20%;
+.w-16 {
+  width: 4rem;
 }
 .w-screen {
   width: 100vw;
 }
 .w-40 {
   width: 10rem;
+}
+.w-3\/12 {
+  width: 25%;
 }
 .w-32 {
   width: 8rem;
@@ -587,9 +605,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-2\/4 {
   width: 50%;
-}
-.w-3\/12 {
-  width: 25%;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -603,11 +618,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-6xl {
   max-width: 72rem;
 }
-.max-w-3xl {
-  max-width: 48rem;
-}
 .max-w-xs {
   max-width: 18.5rem;
+}
+.max-w-3xl {
+  max-width: 48rem;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -675,12 +690,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
 }
+.rounded-t-full {
+  border-top-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+}
+.rounded-b-full {
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
 .border-4 {
   border-width: 4px;
 }
 .bg-primary-bg {
   --tw-bg-opacity: 1;
-  background-color: rgb(223 225 234 / var(--tw-bg-opacity));
+  background-color: rgb(189 194 216 / var(--tw-bg-opacity));
 }
 .bg-secondary-bg {
   --tw-bg-opacity: 1;
@@ -690,9 +713,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(240 255 247 / var(--tw-bg-opacity));
 }
+.bg-primary-txt {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 233 219 / var(--tw-bg-opacity));
+}
 .bg-main-bg {
   --tw-bg-opacity: 1;
-  background-color: rgb(189 194 216 / var(--tw-bg-opacity));
+  background-color: rgb(204 209 232 / var(--tw-bg-opacity));
 }
 .bg-link {
   --tw-bg-opacity: 1;
@@ -756,7 +783,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   vertical-align: middle;
 }
 .font-primary {
-  font-family: 'Noto Serif', serif;
+  font-family: 'Playfair Display', serif;
 }
 .font-secondary {
   font-family: 'Open Sans', sans-serif;
@@ -793,11 +820,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-6xl {
+  font-size: 2.875rem;
+  line-height: 4rem;
+}
 .font-medium {
   font-weight: 500;
 }
+.font-black {
+  font-weight: 900;
+}
 .font-bold {
   font-weight: 700;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .text-secondary-txt {
   --tw-text-opacity: 1;
@@ -819,10 +856,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(0 139 37 / var(--tw-text-opacity));
 }
-.text-primary-bg {
-  --tw-text-opacity: 1;
-  color: rgb(223 225 234 / var(--tw-text-opacity));
-}
 .text-secondary-bg {
   --tw-text-opacity: 1;
   color: rgb(71 95 43 / var(--tw-text-opacity));
@@ -839,6 +872,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .duration-1000 {
   transition-duration: 1000ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hover\:bg-link:hover {
   --tw-bg-opacity: 1;
@@ -925,6 +964,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 13rem;
   }
 
+  .md\:w-9\/12 {
+    width: 75%;
+  }
+
   .md\:w-60 {
     width: 15rem;
   }
@@ -935,10 +978,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:w-1\/4 {
     width: 25%;
-  }
-
-  .md\:w-9\/12 {
-    width: 75%;
   }
 
   .md\:grid-cols-2 {
@@ -978,14 +1017,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2.5rem;
   }
 
-  .md\:text-5xl {
-    font-size: 2.5rem;
-    line-height: 3.375rem;
-  }
-
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 2.5rem;
+    line-height: 3.375rem;
   }
 
   .md\:text-2xl {
@@ -1019,5 +1058,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
+@media (min-width: 1536px) {
+
+  .\32xl\:mr-0 {
+    margin-right: 0px;
   }
 }
