--- a/styles/custom.css
+++ b/styles/custom.css
@@ -19,8 +19,15 @@ html {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
+.remove-highlight {
+  outline-style: none;
+  box-shadow: none;
+  border-color: transparent;
+  outline: none;
+}
+
 @media (max-width: 550px) {
   .grid-container--fit {
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
 }
