--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -457,26 +457,35 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-bottom-11 {
   bottom: -2.75rem;
 }
+.bottom-5 {
+  bottom: 1.25rem;
+}
 .left-0 {
   left: 0px;
 }
-.bottom-2 {
-  bottom: 0.5rem;
+.bottom-3 {
+  bottom: 0.75rem;
 }
 .left-4 {
   left: 1rem;
 }
-.z-50 {
-  z-index: 50;
+.z-20 {
+  z-index: 20;
 }
 .z-10 {
   z-index: 10;
+}
+.z-50 {
+  z-index: 50;
 }
 .-z-0 {
   z-index: 0;
 }
 .m-auto {
   margin: auto;
+}
+.m-3 {
+  margin: 0.75rem;
 }
 .m-6 {
   margin: 1.5rem;
@@ -485,21 +494,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -525,20 +534,23 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-20 {
-  margin-top: 5rem;
-}
 .mb-32 {
   margin-bottom: 8rem;
 }
 .mt-12 {
   margin-top: 3rem;
+}
+.mt-20 {
+  margin-top: 5rem;
 }
 .block {
   display: block;
@@ -558,11 +570,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-16 {
   height: 4rem;
 }
+.h-3 {
+  height: 0.75rem;
+}
 .h-full {
   height: 100%;
 }
 .h-screen {
   height: 100vh;
+}
+.h-40 {
+  height: 10rem;
 }
 .h-3\/6 {
   height: 50%;
@@ -570,8 +588,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-32 {
   height: 8rem;
 }
-.h-40 {
-  height: 10rem;
+.max-h-half-screen {
+  max-height: 70vh;
 }
 .max-h-screen {
   max-height: 100vh;
@@ -588,23 +606,29 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-16 {
   width: 4rem;
 }
-.w-screen {
-  width: 100vw;
+.w-11\/12 {
+  width: 91.666667%;
 }
 .w-40 {
   width: 10rem;
 }
-.w-3\/12 {
-  width: 25%;
+.w-2\/4 {
+  width: 50%;
 }
 .w-32 {
   width: 8rem;
 }
+.w-3\/12 {
+  width: 25%;
+}
+.w-screen {
+  width: 100vw;
+}
 .w-24 {
   width: 6rem;
 }
-.w-2\/4 {
-  width: 50%;
+.min-w-full {
+  min-width: 100%;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -618,17 +642,17 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-6xl {
   max-width: 72rem;
 }
-.max-w-xs {
-  max-width: 18.5rem;
-}
-.max-w-3xl {
-  max-width: 48rem;
-}
 .max-w-xl {
   max-width: 36rem;
 }
 .max-w-md {
   max-width: 28rem;
+}
+.max-w-xs {
+  max-width: 18.5rem;
+}
+.max-w-3xl {
+  max-width: 48rem;
 }
 .rotate-180 {
   --tw-rotate: 180deg;
@@ -640,6 +664,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .cursor-pointer {
   cursor: pointer;
 }
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -649,8 +679,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .flex-col {
   flex-direction: column;
 }
+.items-end {
+  align-items: flex-end;
+}
 .items-center {
   align-items: center;
+}
+.justify-end {
+  justify-content: flex-end;
 }
 .justify-center {
   justify-content: center;
@@ -660,6 +696,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .justify-around {
   justify-content: space-around;
+}
+.justify-items-end {
+  justify-items: end;
 }
 .gap-3 {
   gap: 0.75rem;
@@ -678,6 +717,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded {
+  border-radius: 0.25rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
@@ -700,6 +742,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border-4 {
   border-width: 4px;
+}
+.border-link {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 245 182 / var(--tw-border-opacity));
 }
 .bg-primary-bg {
   --tw-bg-opacity: 1;
@@ -725,6 +771,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 245 182 / var(--tw-bg-opacity));
 }
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-inputLabelColour {
+  --tw-bg-opacity: 1;
+  background-color: rgb(61 64 78 / var(--tw-bg-opacity));
+}
 .bg-radial {
   background-color: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(161,233,219,0.7049194677871149) 0%, rgba(0,0,0,0.80015756302521) 100%);
 }
@@ -739,21 +793,32 @@ Ensure the default browser behavior of the `hidden` attribute.
 .p-4 {
   padding: 1rem;
 }
+.p-0 {
+  padding: 0px;
+}
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .pt-20 {
   padding-top: 5rem;
@@ -772,6 +837,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pt-10 {
   padding-top: 2.5rem;
+}
+.pr-4 {
+  padding-right: 1rem;
 }
 .text-center {
   text-align: center;
@@ -807,14 +875,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-2xl {
-  font-size: 1.375rem;
-  line-height: 2rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -856,19 +916,41 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(0 139 37 / var(--tw-text-opacity));
 }
+.text-red-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(113 128 150 / var(--tw-text-opacity));
+}
 .text-secondary-bg {
   --tw-text-opacity: 1;
   color: rgb(71 95 43 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
-.opacity-50 {
-  opacity: 0.5;
+.opacity-100 {
+  opacity: 1;
+}
+.opacity-75 {
+  opacity: 0.75;
 }
 .opacity-40 {
   opacity: 0.4;
+}
+.opacity-50 {
+  opacity: 0.5;
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .duration-1000 {
   transition-duration: 1000ms;
@@ -878,6 +960,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hover\:border-4:hover {
+  border-width: 4px;
 }
 .hover\:bg-link:hover {
   --tw-bg-opacity: 1;
@@ -895,14 +980,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.75;
 }
 @media (min-width: 425px) {
-
-  .sm\:bottom-6 {
-    bottom: 1.5rem;
-  }
-
-  .sm\:left-8 {
-    left: 2rem;
-  }
 
   .sm\:mx-auto {
     margin-left: auto;
@@ -923,6 +1000,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:w-1\/4 {
     width: 25%;
+  }
+
+  .sm\:border-0 {
+    border-width: 0px;
   }
 }
 @media (min-width: 768px) {
@@ -960,8 +1041,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 15rem;
   }
 
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .md\:w-52 {
     width: 13rem;
+  }
+
+  .md\:w-3\/4 {
+    width: 75%;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
   }
 
   .md\:w-9\/12 {
@@ -972,12 +1065,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 15rem;
   }
 
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
+  .md\:max-w-4xl {
+    max-width: 56rem;
   }
 
   .md\:grid-cols-2 {
@@ -1035,11 +1124,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
-  }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 }
 @media (min-width: 1024px) {
