--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -624,9 +624,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-screen {
   width: 100vw;
 }
-.w-24 {
-  width: 6rem;
-}
 .min-w-full {
   min-width: 100%;
 }
@@ -782,6 +779,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-radial {
   background-color: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(161,233,219,0.7049194677871149) 0%, rgba(0,0,0,0.80015756302521) 100%);
 }
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -795,6 +796,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .p-0 {
   padding: 0px;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .py-10 {
   padding-top: 2.5rem;
@@ -945,8 +949,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .opacity-40 {
   opacity: 0.4;
 }
-.opacity-50 {
-  opacity: 0.5;
+.opacity-30 {
+  opacity: 0.3;
 }
 .outline-none {
   outline: 2px solid transparent;
